# Uri

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: BUILDING.md
include/AfterUri/: AfterUri.h  Error.h  parseFunctions.h  stdExtension.h  uri.h  uriImpl.h
src/: parseFunctions.cpp  uri.cpp
test/: CMakeLists.txt  TestHelpFunctions.cpp  TestParser.cpp  UriTest.cpp  UriTest.h
